<resources
    xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">ADATVMenu</string>
    <string name="related_movies">Related Videos</string>
    <string name="degree">&#176;</string>
    <string name="whtertji">level</string>
    <string name="error">Error</string>
    <string name="ok">OK</string>
    <string name="pause">Pause</string>
    <string name="play">Play</string>
    <string name="stop">Stop</string>
    <string name="init_text">00:00</string>
    <string name="play_pause_description">Play Pause Button</string>
    <string name="loading">Loading…</string>
    <string name="no_video_found">No video was found</string>
    <string name="about_app">About DemoCast Player</string>
    <string name="version">Version: </string>
    <string name="popular_header">Popular Videos</string>
    <string name="preferences">PREFERENCES</string>
    <string name="grid_view">Grid View</string>
    <string name="error_fragment">Error Fragment</string>
    <string name="personal_settings">Personal Settings</string>
    <string name="watch_trailer_1">Watch trailer</string>
    <string name="watch_trailer_2">FREE</string>
    <string name="rent_1">Rent By Day</string>
    <string name="rent_2">From $1.99</string>
    <string name="buy_1">Buy and Own</string>
    <string name="buy_2">AT $9.99</string>
    <string name="movie">Movie</string>
    <string name="should_start">shouldStart</string>
    <string name="start_position">startPosition</string>
    <string name="search_results">Search Results</string>
    <string name="video_error_media_load_timeout">Media loading timed out</string>
    <string name="video_error_server_inaccessible">Media server was not reachable</string>
    <string name="video_error_unknown_error">Failed to load video</string>
    <string name="error_fragment_message">An error occurred</string>
    <string name="dismiss_error">Dismiss</string>
    <string name="oops">Oops</string>
    <string name="str_touchbar_back">Back</string>
    <string name="str_touchbar_home">Home</string>
    <string name="str_touchbar_task">Task</string>
    <string name="str_touchbar_input">Input</string>
    <string name="str_touchbar_menu">Menu</string>
    <string name="str_touchbar_volplus">Vol+</string>
    <string name="str_touchbar_volminus">Vol-</string>
    <string name="str_touchbar_blightplus">Blight+</string>
    <string name="str_touchbar_blightminus">Blight-</string>
    <string name="str_touchbar_brightnessplus">Bright+</string>
    <string name="str_touchbar_brightnessminus">Bright-</string>
    <string name="str_touchbar_channelplus">CH+</string>
    <string name="str_touchbar_channelminus">CH-</string>
    <string name="str_touchbar_whitepanel">WPanel</string>
    <string name="str_touchbar_screencomment">SComment</string>
    <string name="str_touchbar_screenshot">ScShot</string>
    <string name="str_touchbar_user">User</string>
    <string name="str_touchbar_defaultvalue">50</string>
    <string name="str_touchbar_taken_screenshot">Taken screenshot in /mnt/sdcard/screenshot sucessed!</string>
    <string name="str_sdcard_not_found">SD card not found!</string>
    <string name="source_changing">Source changing!</string>
    <string name="menu_cannot_use">Menu can not use!</string>
    <string name="input_cannot_use">Input can not use!</string>
    <string name="str_mainmenu_general">General</string>
    <string name="str_mainmenu_picture">Picture</string>
    <string name="str_mainmenu_sound">Sound</string>
    <string name="str_mainmenu_channel">Channel</string>
    <string name="str_mainmenu_network">Network</string>
    <string name="str_mainmenu_intelligence">Intelligence</string>
    <string name="str_mainmenu_system">System</string>
    <string name="str_mainmenu_about">About</string>
    <string name="str_mainmenu_content">Image</string>
    <string name="str_mainmenu_no_text" />
    <string name="str_mainmenu_default_val0">0</string>
    <string name="str_mainmenu_default_val50">50</string>
    <string name="str_mainmenu_default_switch_on">ON</string>
    <string name="str_mainmenu_default_switch_off">OFF</string>
    <string name="str_mainmenu_dialog_confirm">OK</string>
    <string name="str_mainmenu_dialog_cancel">Cancel</string>
    <string name="str_mainmenu_general_powerinput">Power Input</string>
    <string name="str_mainmenu_general_powerinput_android">android</string>
    <string name="str_mainmenu_general_appmanager">AppManager</string>
    <string name="str_mainmenu_general_wind">Auxiliary touch</string>
    <string name="str_mainmenu_general_timedate">Time/Date</string>
    <string name="str_mainmenu_general_weather">Weather</string>
    <string name="str_mainmenu_general_weather_time">Date</string>
    <string name="str_mainmenu_general_weather_icon">Weather</string>
    <string name="str_mainmenu_general_weather_temperature">Temperature</string>
    <string name="str_mainmenu_general_weather_weather">Weather Type</string>
    <string name="str_mainmenu_general_weather_wind">Wind</string>
    <string name="str_mainmenu_general_appmanager_name">Apply Name</string>
    <string name="str_mainmenu_general_appmanager_version">Version</string>
    <string name="str_mainmenu_general_appmanager_size">Size</string>
    <string name="str_mainmenu_general_appmanager_total_space">Total Space:</string>
    <string name="str_mainmenu_general_appmanager_free_space">Free Space:</string>
    <string name="str_mainmenu_general_weather_return">Return</string>
    <string name="str_mainmenu_general_weather_title">Weather query</string>
    <string name="str_mainmenu_general_weather_other">Other</string>
    <string name="weather_current_temperature">Current Temperature:</string>
    <string name="weather_today_weather">Today weather:</string>
    <string name="weather_today_temperature">Today Temperature:</string>
    <string name="weather_wind_power">Wind Power:</string>
    <string name="weather_careful">Reminder:</string>
    <string name="weather_query_city">Check the weather in other cities</string>
    <string name="weather_See_detail">Look at the weather for the next five days</string>
    <string name="input_city_name">Please enter the city name of the query:</string>
    <string name="str_mainmenu_general_weather_city">GuangZhou</string>
    <string name="str_mainmenu_general_weather_pm25">PM2.5</string>
    <string name="str_mainmenu_general_weather_pm25_val">48</string>
    <string name="str_mainmenu_general_weather_today">Today</string>
    <string name="str_mainmenu_general_weather_tomorrow">Tomorrow</string>
    <string name="str_mainmenu_general_weather_dat">Day after tomorrow</string>
    <string name="str_mainmenu_general_weather_today_date">Thursday</string>
    <string name="str_mainmenu_general_weather_temperature1">26℃~36℃</string>
    <string name="str_mainmenu_general_weather_current_temperature">30℃</string>
    <string name="str_mainmenu_general_weather_weather1">Sunny</string>
    <string name="str_mainmenu_general_weather_wind1">Breeze</string>
    <string name="str_mainmenu_general_weather_index">Index</string>
    <string name="str_mainmenu_general_weather_index_text0">----</string>
    <string name="str_mainmenu_general_weather_index_text1">--</string>
    <string name="str_mainmenu_general_weather_query">Weather query...</string>
    <string name="str_mainmenu_general_weather_query_error">Check no weather information.</string>
    <string name="str_mainmenu_general_weather_enter_city_name">Please enter a city name</string>
    <string name="str_mainmenu_general_weather_network_error">Network anomalies, can not check the weather, please check the network is available!</string>
    <string name="str_mainmenu_picture_picturemode">Picture Mode</string>
    <string name="str_mainmenu_picture_geometricadjust">GeometricAdj</string>
    <string name="str_mainmenu_picture_zoommode">Zoom Mode</string>
    <string name="str_mainmenu_picture_brightness">Brightness</string>
    <string name="str_mainmenu_picture_contrast">Contrast</string>
    <string name="str_mainmenu_picture_backlight">Back Light</string>
    <string name="str_mainmenu_picture_hue">Hue</string>
    <string name="str_mainmenu_picture_autoadjust">Auto Adjust</string>
    <string name="str_mainmenu_picture_imgnoisereduction">Img Noise Reduction</string>
    <string name="str_mainmenu_picture_color_temperature">Color Temp</string>
    <string name="str_mainmenu_picture_color_temperature_standard">Standard</string>
    <string name="str_mainmenu_picture_color_temperature_cold">Clod</string>
    <string name="str_mainmenu_picture_color_temperature_warm">Warm</string>
    <string name="str_mainmenu_picture_color_temperature_user">User</string>
    <string name="str_mainmenu_picture_picturemode_lightness">Lightness</string>
    <string name="str_mainmenu_picture_picturemode_standard">Standard</string>
    <string name="str_mainmenu_picture_picturemode_soft">Soft</string>
    <string name="str_mainmenu_picture_picturemode_user">User</string>
    <string name="str_mainmenu_picture_picturemode_game">Game</string>
    <string name="str_mainmenu_picture_zoommode_default">Default</string>
    <string name="str_mainmenu_sound_soundmode">Sound Mode</string>
    <string name="str_mainmenu_sound_srs">SRS</string>
    <string name="str_mainmenu_sound_equalizer">Equalizer</string>
    <string name="str_mainmenu_sound_mute">Mute</string>
    <string name="str_mainmenu_sound_soundmode_standard">Standard</string>
    <string name="str_mainmenu_network_wifihotspot">Wifi Hotspot</string>
    <string name="str_mainmenu_network_networkdetails">Network Info</string>
    <string name="str_mainmenu_system_location">Location</string>
    <string name="str_mainmenu_system_location_default_val">GuangZhou</string>
    <string name="str_mainmenu_system_powermusic">Power Music</string>
    <string name="str_mainmenu_about_systeminfo">System Info</string>
    <string name="str_mainmenu_about_instructions">Instructions</string>
    <string name="str_mainmenu_about_localname">Local Name</string>
    <string name="str_mainmenu_about_localname_default_val">Mstar Android TV</string>
    <string name="str_mainmenu_about_restore">Restore</string>
    <string name="str_pic_xvycc">xvYCC</string>
    <string name="str_sound_avc"> AVC </string>
    <string name="str_sound_autohoh">Auto HOH</string>
    <string name="str_sound_surround">Surround sound</string>
    <string name="language_input_setting">Language/Keyboard</string>
        <string name="local_update">Local Update</string>
        <string name="net_update">Net Update</string>
        <string name="Wifi">Wi-Fi</string>
        <string name="bluetooth_setting">Bluetooth</string>
    <string name="ethernet_settings">"Wired"</string>
    <string name="str_pic_mpegnoisereduction">MPEG Noise reduction</string>
    <string name="upgrade_help_title">Upgrade operation help：</string>
    <string name="upgrade_help_1">1.Click the "download now", and the new software starts downloading. When the download is complete, click "upgrade now" and the device starts upgrading。</string>
    <string name="upgrade_help_3">2.When the upgrade is complete, the device is in standby mode (red indicator light, Chang Liang). Press the remote power button to start the device。</string>
    <string name="upgrade_help_4">3.Upgrade work done。</string>
    <string name="attention">Matters needing attention：</string>
    <string name="attention_1">1.During the upgrade, do not remotely control the equipment or power off the equipment。</string>
    <string name="attention_2">2.During the upgrade process, when the device is in black standby for a long time, press the remote control "power" button to boot。</string>
    <string name="attention_3">3.After the upgrade, the device will resume factory settings, please reinstall the network settings and other operations。</string>
    <string name="attention_4" />
</resources>